alignement fixed

--- a/Frontend/src/assets/styles/main.css
+++ b/Frontend/src/assets/styles/main.css
@@ -7,7 +7,8 @@
 }
 
 .home-center {
-  padding-top: 20%;
+  padding-top: 10%;
+  text-align: center;
 }
 
 .home-title h1 {
@@ -31,6 +32,22 @@ a:hover {
   color: white;
   padding-top: 50px;
   padding-left: 100px;
+}
+
+@media (max-width: 768px) {
+  .home-title h6 {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+  .button-get {
+    margin-left: none;
+    margin-right: none;
+    margin-top: 100px;
+  }
+}
+
+.col-sm {
+  text-align: center;
 }
 
 /* CSS */
@@ -59,7 +76,7 @@ a:hover {
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: 100%;
+  width: 70%;
   will-change: transform;
 }
 
@@ -79,11 +96,11 @@ a:hover {
   transform: translateY(0);
 }
 
-.button-get {
+/* .button-get {
   margin-left: 200px;
   margin-right: 200px;
   margin-top: 50px;
-}
+} */
 
 /*Signup*/
 .screen-center {
@@ -251,9 +268,22 @@ a:hover {
 
 /*Dashboard*/
 /* Dashboard Container */
+.dashboard-container::before {
+  content: "";
+  background-image: url("../images/layered-peaks-haikei.svg");
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
 .dashboard-container {
   display: flex;
-  background-color: rgb(255, 255, 255);
+
   color: rgb(54, 54, 54);
   /* padding: 20px; */
   height: 100vh;
@@ -370,7 +400,7 @@ button {
   align-items: center;
   justify-content: center;
 }
-.Developer-credits{
+.Developer-credits {
   position: absolute;
   bottom: 0;
   margin-bottom: 100px;
@@ -404,7 +434,7 @@ button {
   }
   .toggle-sidebar-button {
     position: fixed;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0);
     color: #111827;
     padding: 20px;
     border: none;
@@ -439,7 +469,6 @@ button {
     flex-grow: 1;
   }
 
-
   .show-sidebar {
     left: 0;
   }
@@ -448,6 +477,11 @@ button {
     display: flex;
     justify-content: center;
     margin-top: 50px;
+  }
+
+  .success-message,
+  .update-success-message {
+    margin-left: 8%;
   }
 }
 .logout-button-container {
